--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form id="equipamentoForm">
+                    <form id="equipamentoForm" novalidate>
                         <div class="mb-3">
                             <label for="equipamentoNome" class="form-label">Nome</label>
                             <input type="text" class="form-control" id="equipamentoNome" required>
@@ -77,6 +77,50 @@
                         <div class="mb-3">
                             <label for="equipamentoTipo" class="form-label">Tipo</label>
                             <input type="text" class="form-control" id="equipamentoTipo" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="equipamentoNumeroSerie" class="form-label">Número de série</label>
+                            <input type="text" class="form-control" id="equipamentoNumeroSerie" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="equipamentoMarca" class="form-label">Marca</label>
+                            <input type="text" class="form-control" id="equipamentoMarca" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="equipamentoModelo" class="form-label">Modelo</label>
+                            <input type="text" class="form-control" id="equipamentoModelo" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="equipamentoHdSsd" class="form-label">HD/SSD</label>
+                            <input type="text" class="form-control" id="equipamentoHdSsd" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="equipamentoProcessador" class="form-label">Processador</label>
+                            <input type="text" class="form-control" id="equipamentoProcessador" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="equipamentoPlacaDeVideo" class="form-label">Placa de video</label>
+                            <input type="text" class="form-control" id="equipamentoPlacaDeVideo" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="equipamentoMemoriaRam" class="form-label">Memoria Ram</label>
+                            <input type="text" class="form-control" id="equipamentoMemoriaRam" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="equipamentoSistemaOperacional" class="form-label">Sistema Operacional</label>
+                            <input type="text" class="form-control" id="equipamentoSistemaOperacional" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="equipamentoArquitetura" class="form-label">Arquitetura</label>
+                            <input type="text" class="form-control" id="equipamentoArquitetura" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="equipamentoEnderecoMac" class="form-label">Endereço MAC</label>
+                            <input type="text" class="form-control" id="equipamentoEnderecoMac" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="equipamentoEtiqueta" class="form-label">Etiqueta</label>
+                            <input type="text" class="form-control" id="equipamentoEtiqueta" required>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
