tabela historico reserva

--- a/index.html
+++ b/index.html
@@ -55,6 +55,30 @@
 
                     </tbody>
                 </table>
+               
+            </div>
+            <div class="row">
+                <div class="col-md-12 mb-3 text-center">
+                    <table class="table table-sm table-striped table-hover">
+                        <h2>Histórico</h2>
+                        <thead>
+                            <tr class="table-secondary">
+                                <th>Responsável/Setor</th>
+                                <th>Data Solicitação</th>
+                                <th>Período</th>
+                                <th>Local Evento</th>
+                                <th>Telefone</th>
+                                <th>Data Retirada</th>
+                                <th>Data Entrega</th>
+                                <th>Data Devolucao</th>
+                                <th>Ação</th>
+                            </tr>
+                        </thead>
+                        <tbody class="table-group-divider" id="historicoTableBody">
+
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
@@ -107,7 +131,8 @@
                             <input type="text" class="form-control" id="equipamentoMemoriaRam" required>
                         </div>
                         <div class="mb-3">
-                            <label for="equipamentoSistemaOperacional" class="form-label">Sistema Operacional</label>
+                            <label for="equipamentoSistemaOperacional" class="form-label">Sistema
+                                Operacional</label>
                             <input type="text" class="form-control" id="equipamentoSistemaOperacional" required>
                         </div>
                         <div class="mb-3">
