--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="./css/style.css" rel="stylesheet">
     <link href="./css/fontawesome-free-6.5.2-web/css/all.min.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -59,7 +60,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12 mb-3 text-center">
-                    <table class="table table-sm table-striped table-hover">
+                    <table class="table table-sm table-striped table-hover" id="historicoTable">
                         <h2>Histórico</h2>
                         <thead>
                             <tr class="table-secondary">
@@ -78,6 +79,7 @@
 
                         </tbody>
                     </table>
+                    <div id="historicoPagination" class="d-flex justify-content-center"></div>
                 </div>
             </div>
         </div>
@@ -242,6 +244,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+
     <script src="/js/script.js"></script>
 </body>
 
