equipamento tipo enum ok

--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
                         </div>
                         <div class="mb-3">
                             <label for="equipamentoTipo" class="form-label">Tipo</label>
-                            <input type="text" class="form-control" id="equipamentoTipo" required>
+                            <select class="form-select" id="equipamentoTipo" required>
+                                <option value="Notebook">Notebook</option>
+                                <option value="Datashow">Datashow</option>
+                            </select>
                         </div>
                         <div class="mb-3">
                             <label for="equipamentoNumeroSerie" class="form-label">Número de série</label>
