--- a/index.html
+++ b/index.html
@@ -4,251 +4,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reserva de Equipamentos</title>
+    <title>Login e Cadastro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./css/style.css" rel="stylesheet">
-    <link href="./css/fontawesome-free-6.5.2-web/css/all.min.css" rel="stylesheet">
-
+    <script type="module" src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link href="./css/login.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container mt-5 d-flex justify-content-center">
-        <div class="row">
-            <div class="col-md-5 mb-3 text-center">
-                <button type="button" class="btn btn-light mb-3 btn-outline-dark" data-bs-toggle="modal"
-                    data-bs-target="#equipamentoModal">
-                    <b>Adicionar Equipamento</b>
-                </button>
-                <table class="table table-sm table-striped table-hover">
-                    <thead>
-                        <tr class="table-secondary">
-                            <th>Nome</th>
-                            <th>Tipo</th>
-                            <th>Disponibilidade</th>
-                            <th>Ação</th>
-                        </tr>
-                    </thead>
-                    <tbody class="table-group-divider" id="equipamentoTableBody">
+    <div class="container">
 
-                    </tbody>
-                </table>
-            </div>
-            <div class="col-md-7 mb-3 text-center">
-                <button type="button" class="btn btn-light mb-3 btn-outline-dark" data-bs-toggle="modal"
-                    data-bs-target="#reservaModal">
-                    <b>Adicionar Reserva</b>
-                </button>
-                <table class="table table-sm table-striped table-hover">
-                    <thead>
-                        <tr class="table-secondary">
-                            <th>Responsável/Setor</th>
-                            <th>Data Solicitação</th>
-                            <th>Período</th>
-                            <th>Local Evento</th>
-                            <th>Telefone</th>
-                            <th>Data Retirada</th>
-                            <th>Data Entrega</th>
-                            <th>Equipamentos Reservados</th>
-                            <th>Ação</th>
-                        </tr>
-                    </thead>
-                    <tbody class="table-group-divider" id="reservaTableBody">
-
-                    </tbody>
-                </table>
-               
-            </div>
-            <div class="row">
-                <div class="col-md-12 mb-3 text-center">
-                    <table class="table table-sm table-striped table-hover" id="historicoTable">
-                        <h2>Histórico</h2>
-                        <thead>
-                            <tr class="table-secondary">
-                                <th>Responsável/Setor</th>
-                                <th>Data Solicitação</th>
-                                <th>Período</th>
-                                <th>Local Evento</th>
-                                <th>Telefone</th>
-                                <th>Data Retirada</th>
-                                <th>Data Entrega</th>
-                                <th>Data Devolucao</th>
-                                <th>Ação</th>
-                            </tr>
-                        </thead>
-                        <tbody class="table-group-divider" id="historicoTableBody">
-
-                        </tbody>
-                    </table>
-                    <div id="historicoPagination" class="d-flex justify-content-center"></div>
+        <div class="form-container register-container">
+            <form id="registerForm">
+                <h1 class="text-center">Cadastro</h1>
+                <div class="form-group mb-3">
+                    <input id="usuario_cad" type="text" class="form-control" placeholder="Usuário" name="username" required>
                 </div>
-            </div>
+                <div class="form-group mb-3">
+                    <input id="email_cad" type="email" class="form-control" placeholder="Email" name="email" required>
+                </div>
+                <div class="form-group mb-3">
+                    <input id="senha_cad" type="password" class="form-control" placeholder="Senha" name="password" required>
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Cadastrar</button>
+                <div class="text-center mt-3">
+                    <span>Já tem uma conta? <a href="#" id="showLogin">Login</a></span>
+                </div>
+            </form>
+        </div>
+
+        <div class="form-container login-container active">
+            <form id="loginForm">
+                <h1 class="text-center">Login</h1>
+                <div class="form-group mb-3">
+                    <input id="usuario_login" type="text" class="form-control" placeholder="Username" name="username" required>
+                </div>
+                <div class="form-group mb-3">
+                    <input id="senha_login" type="password" class="form-control" placeholder="Password" name="password" required>
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Login</button>
+                <div class="text-center mt-3">
+                    <span>Não tem uma conta? <a href="#" id="showRegister">Cadastre-se</a></span>
+                </div>
+            </form>
         </div>
     </div>
 
-    <!-- Equipamento Modal -->
-    <div class="modal fade" id="equipamentoModal" tabindex="-1" aria-labelledby="equipamentoModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="equipamentoModalLabel">Adicionar Equipamento</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="equipamentoForm" novalidate>
-                        <div class="mb-3">
-                            <label for="equipamentoNome" class="form-label">Nome</label>
-                            <input type="text" class="form-control" id="equipamentoNome" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="equipamentoTipo" class="form-label">Tipo</label>
-                            <select class="form-select" id="equipamentoTipo" required>
-                                <option value="Notebook">Notebook</option>
-                                <option value="Datashow">Datashow</option>
-                            </select>
-                        </div>
-                        <div class="mb-3">
-                            <label for="equipamentoNumeroSerie" class="form-label">Número de série</label>
-                            <input type="text" class="form-control" id="equipamentoNumeroSerie" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="equipamentoMarca" class="form-label">Marca</label>
-                            <input type="text" class="form-control" id="equipamentoMarca" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="equipamentoModelo" class="form-label">Modelo</label>
-                            <input type="text" class="form-control" id="equipamentoModelo" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="equipamentoHdSsd" class="form-label">HD/SSD</label>
-                            <input type="text" class="form-control" id="equipamentoHdSsd" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="equipamentoProcessador" class="form-label">Processador</label>
-                            <input type="text" class="form-control" id="equipamentoProcessador" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="equipamentoPlacaDeVideo" class="form-label">Placa de video</label>
-                            <input type="text" class="form-control" id="equipamentoPlacaDeVideo" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="equipamentoMemoriaRam" class="form-label">Memoria Ram</label>
-                            <input type="text" class="form-control" id="equipamentoMemoriaRam" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="equipamentoSistemaOperacional" class="form-label">Sistema
-                                Operacional</label>
-                            <input type="text" class="form-control" id="equipamentoSistemaOperacional" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="equipamentoArquitetura" class="form-label">Arquitetura</label>
-                            <input type="text" class="form-control" id="equipamentoArquitetura" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="equipamentoEnderecoMac" class="form-label">Endereço MAC</label>
-                            <input type="text" class="form-control" id="equipamentoEnderecoMac" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="equipamentoEtiqueta" class="form-label">Etiqueta</label>
-                            <input type="text" class="form-control" id="equipamentoEtiqueta" required>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                            <button type="submit" class="btn btn-primary">Salvar Equipamento</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Reserva Modal -->
-    <div class="modal fade" id="reservaModal" tabindex="-1" aria-labelledby="reservaModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="reservaModalLabel">Adicionar Reserva</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="reservaForm">
-                        <div class="mb-3">
-                            <label for="responsavelSetor" class="form-label">Responsável/Setor</label>
-                            <input type="text" class="form-control" id="responsavelSetor" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="dataSolicitacao" class="form-label">Data de Solicitação</label>
-                            <input type="date" class="form-control" id="dataSolicitacao" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="dataRetirada" class="form-label">Data de Retirada</label>
-                            <input type="date" class="form-control" id="dataRetirada" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="dataEntrega" class="form-label">Data de Entrega</label>
-                            <input type="date" class="form-control" id="dataEntrega" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="periodo" class="form-label">Período</label>
-                            <select class="form-select" id="periodo" required>
-                                <option value="MATUTINO">MATUTINO</option>
-                                <option value="VESPERTINO">VESPERTINO</option>
-                                <option value="INTEGRAL">INTEGRAL</option>
-                            </select>
-                        </div>
-                        <div class="mb-3">
-                            <label for="localEvento" class="form-label">Local do Evento</label>
-                            <input type="text" class="form-control" id="localEvento" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="telefone" class="form-label">Telefone</label>
-                            <input type="text" class="form-control" id="telefone" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="equipamentos" class="form-label">Equipamentos</label>
-                            <select id="equipamentos" class="form-select" multiple required>
-                            </select>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-                            <button type="submit" class="btn btn-primary">Salvar Reserva</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Confirmação Modal -->
-    <div class="modal fade" id="confirmModal" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="confirmModalLabel">Confirmar Exclusão</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Tem certeza que deseja excluir este item?
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-danger" id="confirmDeleteButton">Excluir</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div aria-live="polite" aria-atomic="true" class="position-relative">
-        <div class="toast-container top-0 end-0 p-3" id="toastContainer">
-        </div>
-    </div>
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
 
-    <script src="/js/script.js"></script>
-</body>
 
+    <script src="/js/login.js"></script>
+</body>
 </html>
